button and image align fixed

--- a/blocks/image-text/image-text.scss
+++ b/blocks/image-text/image-text.scss
@@ -56,6 +56,7 @@
       }
       img {
         width: 100%;
+        display: flex;
       }
       &.block {
         h2 {
