--- a/blocks/promo-no-image/promo-no-image.css
+++ b/blocks/promo-no-image/promo-no-image.css
@@ -33,7 +33,7 @@
   font-family: var(--body-font-family);
   line-height: 24px;
   font-size: 16px;
-  color: #4B4C4D;
+  color: #4b4c4d;
 }
 .promo-no-image-container .promo-no-image > ul > li .cards-card-body p strong {
   font-weight: 700;
